--- a/proxmox/roles/pve_create_vm/tasks/main.yml
+++ b/proxmox/roles/pve_create_vm/tasks/main.yml
@@ -7,12 +7,25 @@
     api_token_secret: "{{ api_token_secret }}"
     node: "{{ proxmox_node }}"
     clone: "{{ clone_vm }}"
-    memory: "{{ vm_memory }}"
     #newid: "{{ vm_id }}" 
     name: "{{ vm_name }}"
     full: true
     storage: "{{ vm_storage }}"
   register: state
+
+- name: Modifay VM
+  community.general.proxmox_kvm:
+    api_host: "{{ api_host }}"
+    api_user: "{{ api_user }}"
+    api_token_id: "{{ api_token_id }}"
+    api_token_secret: "{{ api_token_secret }}"
+    node: "{{ proxmox_node }}"
+    vmid: " {{ state.vmid }}"
+    memory: "{{ vm_memory }}"
+    cores: "{{ vm_cores }}"
+    update: yes
+  when: state.changed
+
 
 - name: Start VM
   community.general.proxmox_kvm:
