--- a/proxmox/roles/docker_install/tasks/main.yml
+++ b/proxmox/roles/docker_install/tasks/main.yml
@@ -1,35 +1,46 @@
 ---
 - name: Install dependencies
+  become: yes
   ansible.builtin.apt:
     name: "{{ item }}"
     state: present
-    update_cashe: true
+    update_cache: true
   loop:
     - ca-certificates 
     - curl
 
-- name: Add Docker's official GPG key
-  ansible.builtin.apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    #file: /etc/apt/keyrings/docker.asc
-    state: present
+- name: Create keyring directory for Docker's GPG key
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
 
-- name: Add the repository to Apt sources
-  ansible.builtin.apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu jammy stable
-    state: present
+- name: Add GPG Docker key and 
+  block:
+    - name: Add key
+      ansible.builtin.get_url:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        dest: /etc/apt/keyrings/docker.asc
+      become: yes
 
--name: Install Docker
+    - name: Add repo
+      ansible.builtin.apt_repository:
+        repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu jammy stable"
+        state: present
+      become: yes
+
+- name: Install Docker
   ansible.builtin.apt:
     name: "{{ item }}"
     state: latest
-    update_cashe: true
+    update_cache: true
   loop:
     - docker-ce 
     - docker-ce-cli 
     - containerd.io 
     - docker-buildx-plugin 
     - docker-compose-plugin
+  become: yes
 
 - name: Ensure docker group exists
   ansible.builtin.group:
