Change docker user and docker host

--- a/proxmox/docker_install.yml
+++ b/proxmox/docker_install.yml
@@ -2,6 +2,6 @@
 # Install docker
 - name: Install docker
   hosts: docker_nodes
-  remote_user: max
+  remote_user: admin
   roles:
     - role: docker_install
