Add docker swarm ip to hosts

--- a/proxmox/hosts.yml
+++ b/proxmox/hosts.yml
@@ -4,6 +4,12 @@ pve_nodes:
   hosts:
     pve.home.lab:
 
-docker_nodes:
-  hosts:
-    192.168.100.95
+docker_swarm_nodes:
+  children:
+    managers:
+      hosts:
+        192.168.100.10
+    workers:
+      hosts:
+        192.168.100.11
+        192.168.100.12
