Add python dependencies to make docker swarm module work

--- a/proxmox/roles/docker_install/tasks/main.yml
+++ b/proxmox/roles/docker_install/tasks/main.yml
@@ -4,6 +4,8 @@
     name:
       - ca-certificates 
       - curl
+      - software-properties-common
+      - python3-docker
     state: present
     update_cache: true
   become: true
