Add nfs server to my swarm cluster

--- a/proxmox/docker_install.yml
+++ b/proxmox/docker_install.yml
@@ -1,7 +1,7 @@
 ---
 # Install docker
 - name: Install docker
-  hosts: docker_nodes
+  hosts: docker_swarm_nodes
   remote_user: admin
   roles:
     - role: docker_install
