--- a/proxmox/hosts.yml
+++ b/proxmox/hosts.yml
@@ -13,3 +13,7 @@ docker_swarm_nodes:
       hosts:
         192.168.100.11:
         192.168.100.12:
+
+nfs_server_nodes:
+  hosts:
+    192.168.100.13:
