add kube hosts in inventory

--- a/proxmox/hosts.yml
+++ b/proxmox/hosts.yml
@@ -1,5 +1,4 @@
 ---
-
 pve_nodes:
   hosts:
     pve.home.lab:
@@ -17,3 +16,11 @@ docker_swarm_nodes:
 nfs_server_nodes:
   hosts:
     192.168.100.13:
+
+kube_nodes:
+  hosts:
+    kube01.home.lab:
+    kube02.home.lab:
+    kube03.home.lab:
+    kube04.home.lab:
+    kube05.home.lab:
