Split cplane and worker nodes in inventory

--- a/proxmox/hosts.yml
+++ b/proxmox/hosts.yml
@@ -18,9 +18,13 @@ nfs_server_nodes:
     192.168.100.13:
 
 kube_nodes:
-  hosts:
-    kube01.home.lab:
-    kube02.home.lab:
-    kube03.home.lab:
-    kube04.home.lab:
-    kube05.home.lab:
+  children:
+    cplane:
+      hosts:
+        kube01.home.lab:
+        kube02.home.lab:
+    workers:
+      hosts:
+        kube03.home.lab:
+        kube04.home.lab:
+        kube05.home.lab:
