--- a/proxmox/hosts.yml
+++ b/proxmox/hosts.yml
@@ -23,7 +23,7 @@ kube_nodes:
       hosts:
         kube01.home.lab:
         kube02.home.lab:
-    workers:
+    kube_workers:
       hosts:
         kube03.home.lab:
         kube04.home.lab:
