--- a/proxmox/roles/postgresql_cluster/defaults/main.yml
+++ b/proxmox/roles/postgresql_cluster/defaults/main.yml
@@ -1,3 +1,4 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # defaults file for postgresql_cluster
+etcd_archive: "https://github.com/etcd-io/etcd/releases/download/v3.5.21/etcd-v3.5.21-linux-amd64.tar.gz"
