--- a/proxmox/roles/postgresql_cluster/tasks/main.yml
+++ b/proxmox/roles/postgresql_cluster/tasks/main.yml
@@ -1,3 +1,6 @@
 #SPDX-License-Identifier: MIT-0
 ---
-# tasks file for postgresql_cluster
+- name: Install etcd cluster
+  ansible.builtin.include_tasks:
+    file: etcd.yml
+
