Add etcd templates. cluster is working now

--- a/proxmox/hosts.ini
+++ b/proxmox/hosts.ini
@@ -1,13 +1,13 @@
 [all]
 pve.home.lab ansible_host=192.168.1.20 ansible_port=22
-srv_db1      ansible_host=192.168.1.17 ansible_port=22
-srv_db2      ansible_host=192.168.1.18 ansible_port=22
-srv_db3      ansible_host=192.168.1.19 ansible_port=22
+srv-db1      ansible_host=192.168.1.17 ansible_port=22
+srv-db2      ansible_host=192.168.1.18 ansible_port=22
+srv-db3      ansible_host=192.168.1.19 ansible_port=22
 
 [pve_nodes]
 pve.home.lab
 
 [pg_server_nodes]
-srv_db1
-srv_db2
-srv_db3
+192.168.1.17
+192.168.1.18
+192.168.1.19
