--- a/proxmox/roles/postgresql_cluster/defaults/main.yml
+++ b/proxmox/roles/postgresql_cluster/defaults/main.yml
@@ -2,3 +2,6 @@
 ---
 # defaults file for postgresql_cluster
 etcd_archive: "https://github.com/etcd-io/etcd/releases/download/v3.5.21/etcd-v3.5.21-linux-amd64.tar.gz"
+etcd_cluster_name: "pg_etcd_cluster"
+etcd_data_dir: "/var/lib/etcd"
+etcd_conf_dir: "/etc/etcd"
