--- a/proxmox/roles/postgresql_cluster/tasks/etcd.yml
+++ b/proxmox/roles/postgresql_cluster/tasks/etcd.yml
@@ -52,3 +52,26 @@
   loop:
     - /etc/etcd
     - /var/lib/etcd
+
+- name: Copy etcd config
+  ansible.builtin.template:
+    src: etcd.conf.j2
+    dest: /etc/etcd/etcd.conf
+    owner: etcd
+    group: etcd
+    mode: 0640
+
+- name: Copy etcd systemd service config
+  ansible.builtin.template:
+    src: etcd.service.j2
+    dest: /etc/systemd/system/etcd.service
+    owner: etcd
+    group: etcd
+    mode: 0640
+
+- name: Enable and start etcd service
+  ansible.builtin.systemd:
+    daemon_reload: true
+    name: etcd
+    enabled: true
+    state: started
